--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,16 +81,20 @@ body {
   @apply grid grid-cols-1 md:grid-cols-5 xl:grid-cols-12 gap-5;
 }
 
+.btn-default {
+  @apply w-full md:w-auto inline-flex md:flex items-center justify-center gap-1 whitespace-nowrap py-2 px-4 rounded font-body font-medium text-base bg-white text-text-primary border border-white hover:bg-gray-100 hover:border-gray-100 hover:cursor-pointer transition-all;
+}
+
 .btn-primary {
-  @apply bg-primary hover:bg-primary-hover text-white border border-primary py-2 px-4 rounded font-body font-medium text-base  block md:flex items-center justify-center gap-2 whitespace-nowrap hover:cursor-pointer transition-all;
+  @apply w-full md:w-auto inline-flex md:flex items-center justify-center gap-2 whitespace-nowrap py-2 px-4 rounded font-body font-medium text-base bg-primary text-white border border-primary hover:bg-primary-hover hover:border-primary-hover hover:cursor-pointer transition-all;
 }
 
 .btn-secondary {
-  @apply bg-white hover:bg-gray-100 text-primary border border-primary py-2 px-4 rounded font-body font-medium text-base  block md:flex items-center justify-center gap-2 whitespace-nowrap hover:cursor-pointer transition-all;
+  @apply w-full md:w-auto inline-flex md:flex items-center justify-center gap-2 whitespace-nowrap py-2 px-4 rounded font-body font-medium text-base bg-white text-primary border border-primary hover:bg-gray-100 hover:border-primary-hover hover:text-primary-hover hover:cursor-pointer transition-all;
 }
 
 .btn-accent {
-  @apply bg-gold-pastel hover:bg-gray-100 text-primary border border-gold-pastel py-2 px-4 rounded font-body font-medium text-base  block md:flex items-center justify-center gap-2 whitespace-nowrap hover:cursor-pointer transition-all;
+  @apply w-full md:w-auto inline-flex md:flex items-center justify-center gap-2 whitespace-nowrap py-2 px-4 rounded font-body font-medium text-base bg-gold-pastel text-primary border border-gold-pastel hover:bg-yellow-pastel hover:border-yellow-pastel hover:text-primary-hover hover:cursor-pointer transition-all;
 }
 
 .btn-link {
@@ -98,11 +102,11 @@ body {
 }
 
 .btn-danger {
-  @apply bg-red-500 hover:bg-red-400 border border-red-500 text-white py-2 px-4 rounded font-body font-medium text-base  block md:flex items-center justify-center gap-2 whitespace-nowrap hover:cursor-pointer transition-all;
+  @apply w-full md:w-auto inline-flex md:flex items-center justify-center gap-2 whitespace-nowrap py-2 px-4 rounded font-body font-medium text-base bg-red-500 text-white border border-red-500 hover:bg-red-600 hover:border-red-600 hover:cursor-pointer transition-all;
 }
 
 .btn-disabled {
-  @apply bg-gray-100 text-gray-400 border border-gray-300 py-2 px-4 rounded font-body font-medium text-base  block md:flex items-center justify-center gap-2 whitespace-nowrap hover:cursor-pointer transition-all cursor-not-allowed;
+  @apply w-full md:w-auto inline-flex md:flex items-center justify-center gap-2 whitespace-nowrap py-2 px-4 rounded font-body font-medium text-base bg-gray-200 text-gray-400 border border-gray-200 transition-all cursor-not-allowed;
 }
 
 .alert-danger {
