--- a/src/lib/templates/emails/contact-form.html
+++ b/src/lib/templates/emails/contact-form.html
@@ -94,9 +94,9 @@
   </style>
 </head>
 
-<body style="word-spacing:normal;background-color:#fbf7c0;">
+<body style="word-spacing:normal;background-color:#c5e8c2;">
   <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Has recibido un nuevo mensaje desde el formulario de contacto</div>
-  <div aria-label="Nuevo Mensaje de Contacto" aria-roledescription="email" style="background-color:#fbf7c0;" role="article" lang="und" dir="auto">
+  <div aria-label="Nuevo Mensaje de Contacto" aria-roledescription="email" style="background-color:#c5e8c2;" role="article" lang="und" dir="auto">
     <!-- ESPACIO SUPERIOR -->
     <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     <div style="margin:0px auto;max-width:600px;">
